# adult_classification

./: classification.ipynb  ml-assugnment-2.ipynb  pyproject.toml
