[project]
name = "ssd"
version = "0.1.0"
description = ""
authors = [
    {name = "amir.espahbodi",email = "dev.amir.espahbodi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "imbalanced-learn (>=0.13.0,<0.14.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "skfeature-chappers (>=1.1.0,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "optuna (>=4.3.0,<5.0.0)",
    "hyperopt (>=0.2.7,<0.3.0)",
    "umap-learn (>=0.5.7,<0.6.0)",
    "joblib (>=1.4.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ssd", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
